# kaching

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
.cursor/rules/: uv.mdc
deploy/digitalocean/: README.md  quick-deploy.sh  setup.sh  wordpress-setup.sh
docs/: AFFILIATE_SETUP.md  MCP_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  WORDPRESS_SETUP.md
examples/: README.md  config_demo.py  content_agent_demo.py  end_to_end_demo.py  keyword_research_demo.py  mcp_demo.py  monitor_agent_demo.py  publishing_agent_demo.py
kaching/: __init__.py  config.py  orchestrator.py
kaching/agents/: __init__.py  content_agent.py  monitor_agent.py  publishing_agent.py  research_agent.py
kaching/templates/: cloud.json  custom_demo.json  development.json  digitalocean.json  mac_local.json  pc_local.json  production.json
kaching/tools/: __init__.py  affiliate_tools.py  content_tools.py  health_monitor.py  mcp_integration.py
kaching/utils/: __init__.py  config_manager.py  scheduler.py
scripts/: quick-commit.sh
workspace/: .gitkeep
workspace/config/: .gitkeep
workspace/schedule/: .gitkeep  publishing_schedule.json
